# Offloading-CUDA

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  OffLayer.cu  OffLayer.cuh  compile.txt  device_info  device_info.cu  generator  generator.cpp  hello_world.cc  main  main.cu  main_preload  main_preload.cu  main_preload_stream  main_preload_stream.cu  off_vector copy.cu  off_vector.cu  off_vector.cuh  read  read.cpp  test  test.cu
src/operations/: add.cu
src_C20/: generator  main  main.cu  off_vector.cu  off_vector.cuh  product.cc  read  read.cpp
src_C23/: CMakeLists.txt  read.cpp
test/: CMakeLists.txt  hello_world_test.cc  measure.cpp  test_main.cc  test_synch  test_synch.cu
